dataset1235/2025-2/805158916/users/1514794398/executions/3435325918_254684124.log
== SUBMISSION (2025-09-03 15:06:23)
-- CODE: 
idade = int(input("Insira a idade: "))

print(idade)

if idade >=18
print("Maior idade: ")

else:
print("Menor idade:")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    if idade >=18
                 ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    if idade >=18
                 ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    if idade >=18
                 ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    if idade >=18
                 ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    if idade >=18
                 ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    if idade >=18
                 ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:06:14)
-- CODE: 
idade = int(input("Insira a idade: "))

print(idade)

if idade >=18
print("Maior idade: ")

else:
print("Menor idade:")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    if idade >=18
                 ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    if idade >=18
                 ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    if idade >=18
                 ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    if idade >=18
                 ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    if idade >=18
                 ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    if idade >=18
                 ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:07:36)
-- CODE: 
idade = int(input("Insira a idade: "))

print (idade)

if idade>=18:
print("Maior_de_idade")

else:
print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:07:36)
-- CODE: 
idade = int(input("Insira a idade: "))

print (idade)

if idade>=18:
print("Maior_de_idade")

else:
print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:07:22)
-- CODE: 
idade = int(input("Insira a idade: "))

print (idade)

if idade >=18:
print("Maior_de_idade")

else:
print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:07:23)
-- CODE: 
idade = int(input("Insira a idade: "))

print (idade)

if idade >=18:
print("Maior_de_idade")

else:
print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:08:06)
-- CODE: 
idade = int(input("Insira a idade: "))

print (idade)

if idade>=18:
   print("Maior_de_idade")

else:
   print("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
